fixed vh issue on mobile

--- a/app/assets/stylesheets/partials/_hero.scss
+++ b/app/assets/stylesheets/partials/_hero.scss
@@ -78,7 +78,7 @@
     min-width: 185px;
     max-width: 400px;
     width: 50%;
-    margin-top: -5vh;
+    margin-top: -50px;
     @media (max-width: 550px) {
       margin-top: -25px;
     }
